# semantic-plagiarism-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_output.csv
data/: mock_pairs.csv
data/sample_corpus/: doc_03.txt
docs/: Project_Report.md alias
outputs/: candidates.csv  metrics.csv  preds_03.csv  preds_05.csv  preds_07.csv  two_file_compare.json
src/plagiarism_engine/: cli.py  dataset.py  evaluation.py  lsh.py  minhash.py  preprocessing.py  simhash.py
src/semantic_plagiarism_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_engine.py
