[tool.poetry]
name = "semantic-plagiarism-engine"
version = "0.1.0"
description = "Semantic Duplicate & Near-Plagiarism Detection Engine"
authors = ["Hirad Harirchi"]

packages = [
    { include = "plagiarism_engine", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "<2.0,>=1.20"
pandas = "<2.0,>=1.3"
click = "^8.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"