[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-plagiarism-engine"
version = "0.1.0"
description = "An educational implementation for detecting semantic plagiarism and near-duplicate content using advanced techniques like MinHash, SimHash, and TF-IDF weighting."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hirad2hhk", email = "hirad2hhk@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "click>=8.1",
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/hirad2hhk/semantic-plagiarism-engine"
Repository = "https://github.com/hirad2hhk/semantic-plagiarism-engine"

[project.scripts]
plagiarism-engine = "plagiarism_engine.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose"

[tool.coverage.run]
source = ["src/"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true